--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -22,7 +22,7 @@
       hashtag: obeziany
       ldjson: yes
       answer: |
-	      В первую очередь нужно отправиться на гору Monkey Hill. Она находится в северной части Пхукет-Тауна. Вершину ее венчают разнообразные антенны и радиомачты. Обезьяны также живут в основном в верхней части горы
+	  В первую очередь нужно отправиться на гору Monkey Hill. Она находится в северной части Пхукет-Тауна. Вершину ее венчают разнообразные антенны и радиомачты. Обезьяны также живут в основном в верхней части горы
     - question: Смотровые площадки Пхукетa 
       hashtag: smotrovie
       ldjson: yes
@@ -36,11 +36,10 @@
       hashtag: daiving
       ldjson: yes
       answer: |
-	      Естественно, в первую очередь стоит указать Симиланские острова, которые являются одним из самых известных мест для дайвинга не только в Таиланде, но и во всем мире. Именно здесь можно полностью исследовать все богатство подводного мира Андаманского моря. Правда, нырять и любоваться таким зрелищем могут только сертифицированные дайверы.
-		  Остров Рача Яй. Этот остров расположен недалеко от Пхукета и хорошо известен дайверам со всего мира. Здесь есть неглубокие участки для новичков и более глубокие зоны (от 18 метров глубиной) для профессионалов. Остров также идеально подходит для снорклинга.
+	  Естественно, в первую очередь стоит указать Симиланские острова, которые являются одним из самых известных мест для дайвинга не только в Таиланде, но и во всем мире. Именно здесь можно полностью исследовать все богатство подводного мира Андаманского моря. Правда, нырять и любоваться таким зрелищем могут только сертифицированные дайверы.
+	  Остров Рача Яй. Этот остров расположен недалеко от Пхукета и хорошо известен дайверам со всего мира. Здесь есть неглубокие участки для новичков и более глубокие зоны (от 18 метров глубиной) для профессионалов. Остров также идеально подходит для снорклинга.
           Острова Пхи Пхи также популярны среди дайверов. Архипелаг прославился своими прекрасными подводными пейзажами с коралловыми рифами. На островах есть несколько дайвинг центров с опытными инструкторами, которые обучат нырянию каждого желающего с любым уровнем подготовки.
-          Тем, кто занимается дайвингом на Пхукете профессионально, наверняка будет интересен затонувший в прибрежных водах лайнер «Кинг Круизер». Погрузившись на 30 метровую глубину, каждый дайвер здесь может сделать сенсационное открытие.
-          Прекрасное место, чтобы заняться дайвингом на Пхукете в открытом море – это Анемон Риф. Прекрасные анемоны, скалы, яркие рыбки и прочие подводные обитатели поразят своей красотой.
+          Тем, кто занимается дайвингом на Пхукете профессионально, наверняка будет интересен затонувший в прибрежных водах лайнер «Кинг Круизер». Погрузившись на 30 метровую глубину, каждый дайвер здесь может сделать сенсационное открытие.            Прекрасное место, чтобы заняться дайвингом на Пхукете в открытом море – это Анемон Риф. Прекрасные анемоны, скалы, яркие рыбки и прочие подводные обитатели поразят своей красотой.
           Погружение в Шарк Пойнт – это развлечение не для слабонервных. Здесь дайверы часто встречают прекрасных и устрашающих леопардовых акул. Но опасаться их не стоит, так как они питаются только планктоном и кораллами.
           Любителей острых ощущений также могут заинтересовать многочисленные подводные пещеры возле острова Ко Док Май. Отвесные стены высотой около 50 метров над уровнем моря и 20 метров в глубину поразят своим величием.
           Дайвинг на Пхукете - это возможность увидеть неповторимые подводные пейзажи, которые останутся в памяти на всю жизнь. Узнать более подробно о дайвинге на острове или заказать дайвинг тур по самым выгодным ценам можно на нашем сайте.
@@ -48,12 +47,12 @@
       hashtag: snorkling
       ldjson: yes
       answer: |
-	      Пляж Ката, Пляж Парадайз, Пляж Фридом, Пляж Найтон, Пляж Банана, Пляж Я Нуй, Пляж Ао Сан,Пляж Лем Ка, Пляж Лем Синг.
+          Пляж Ката, Пляж Парадайз, Пляж Фридом, Пляж Найтон, Пляж Банана, Пляж Я Нуй, Пляж Ао Сан,Пляж Лем Ка, Пляж Лем Синг.
     - question: Лучший пляж для серфинга на Пхукете.
       hashtag: serfingphuket
       ldjson: yes
       answer: | 
-	      Лучшими для серфинга на Пхукете считаются пляжи западного побережья острова: Ката, Камала, Най Харн, Калим, Най Янг, Сурин и Пакаранг. Лучшим и самым востребованным среди серферов является пляж Ката, но необходимо быть особенно внимательным в южной его части, где много камней, в том числе не видных под водой.
+          Лучшими для серфинга на Пхукете считаются пляжи западного побережья острова: Ката, Камала, Най Харн, Калим, Най Янг, Сурин и Пакаранг. Лучшим и самым востребованным среди серферов является пляж Ката, но необходимо быть особенно внимательным в южной его части, где много камней, в том числе не видных под водой.
     - question: Где покупать экскурсии на Пхукете?
       hashtag: funphucetex
       ldjson: yes
@@ -306,10 +305,10 @@
       hashtag: covid19sitdown
       ldjson: yes
       answer: |
-        Есть просто программа карантин—для тех кто без вакцинации вообще или с непризнанной. Карантин 7-10 дней, смотря какие условия точно, хотят уменьшить до 5 дней. это строгий карантин без выхода из номера вообще.
-        есть сандбокс-песочница.  Сидите до первого теста в номере, потом можно гулять и все что угодно делать. ночевать в отеле и нельзя уезжать.
-        и есть Test and Go
-        ждать тест нужно в номере и потом свободны..на 5й день делаете экспресс тест сам.
+          Есть просто программа карантин—для тех кто без вакцинации вообще или с непризнанной. Карантин 7-10 дней, смотря какие условия точно, хотят уменьшить до 5 дней. это строгий карантин без выхода из номера вообще.
+          есть сандбокс-песочница.  Сидите до первого теста в номере, потом можно гулять и все что угодно делать. ночевать в отеле и нельзя уезжать.
+          и есть Test and Go
+          ждать тест нужно в номере и потом свободны..на 5й день делаете экспресс тест сам.
     - question: Полностью вакцинированные путешественники?
       hashtag: vaqcine
       ldjson: yes
@@ -321,18 +320,18 @@
       hashtag: vac
       ldjson: yes
       answer: |
-        ### Одобрены  для программ Test and Go / «Песочница» 
-          * CoronaVac Sinovac 2 doses
-          * AstraZeneca / Covishield  2 doses
-          * Pfizer BioNTech 2 doses
-          * Janssen Johnson&Johnson
-          * Moderna  2 doses
-          * COVILO Sinopharm  2 doses
-          * Sputnik V - 2 doses
-          * Covaxin Bharat Biotech  2 doses
+       ### Одобрены  для программ Test and Go / «Песочница» 
+         * CoronaVac Sinovac 2 doses
+         * AstraZeneca / Covishield  2 doses
+         * Pfizer BioNTech 2 doses
+         * Janssen Johnson&Johnson
+         * Moderna  2 doses
+         * COVILO Sinopharm  2 doses
+         * Sputnik V - 2 doses
+         * Covaxin Bharat Biotech  2 doses
         
-        ### Одобрены только для программы «Песочница» 
-          * Sputnik Light  1 dose
+       ### Одобрены только для программы «Песочница» 
+         * Sputnik Light  1 dose
     - question: Что такое отели SHA Extra+
       hashtag: shaextra+
       ldjson: yes
@@ -506,9 +505,9 @@
       ldjson: yes
       answer: |  
 	      Как известно, самые чистые участки береговой линии находятся возле отелей. Панси, к примеру, — целый пляж при отеле, за чистотой которого неустанно следит администрация. ... 
-          Пляж Ката Пляж Ката также считается одним из самых чистых, на берегу есть несколько крупных отелей. ... 
-          Пляж Банг Тао ... 
-          Пляж Найтон
+              Пляж Ката Пляж Ката также считается одним из самых чистых, на берегу есть несколько крупных отелей. ... 
+              Пляж Банг Тао ... 
+              Пляж Найтон
     - question: На каком пляже белый песок на пхукете?
       hashtag: phuketplazhpesok
       ldjson: yes
