--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -6,17 +6,17 @@
       hashtag: slony
       ldjson: yes
       answer: |
-	  Siam Safari. Сиам Сафари - это одна из наиболее надежных компаний, организующих эко-туры в Пхукете. ... 
+          Siam Safari. Сиам Сафари - это одна из наиболее надежных компаний, организующих эко-туры в Пхукете. ... 
           Safari Elephant Club. Открытый в 1986 году Safari Elephant Club претендует на звание самого старого лагеря слонов в Пхукете. ... 
           Kok Chang Elephant Camp. ... 
           Camp Chang Kalim.
-          Ежедневно с 08.00 до 17.30. Прогулка на слонах: 1400 батов для взрослых и 900 батов для детей от 4 до 10 лет за получасовую прогулку, дети до 4 лет — бесплатно
+          Ежедневно с 08.00 до 17.30. Прогулка на слонах 1400 батов для взрослых и 900 батов для детей от 4 до 10 лет за получасовую прогулку, дети до 4 лет — бесплатно
     - question: Где есть тигры на пхукете?   
       hashtag: tigry
       ldjson: yes
       answer: |
-	  Тигры на Пхукете: новый Tiger Park Phuket или в клетке с тигром два
-          Tiger Kingdom – в районе Кату перед перевалом на Патонг (Важно: сейчас в этом парке нет маленьких тигров, только большие и средние)
+          Тигры на Пхукете новый Tiger Park Phuket или в клетке с тигром два
+          Tiger Kingdom – в районе Кату перед перевалом на Патонг (Важно сейчас в этом парке нет маленьких тигров, только большие и средние)
           Tiger Park Phuket – новый парк с тиграми на Пхукете по дороге на Биг Будду.
     - question: Где посмотреть обезьян на пхукете?  
       hashtag: obeziany
@@ -27,7 +27,7 @@
       hashtag: smotrovie
       ldjson: yes
       answer: |
-	      Холм Ранг (Rang Hill), Мост Сарасин, Смотровая площадка у подножия Большого Будды, Смотровая площадка «Ветряки», Смотровая площадка «Карон» (Karon Viewpoint), Смотровая площадка мыса Промтхеп, Наш выбор: обзорная башня Кхао Кхад.
+	      Холм Ранг (Rang Hill), Мост Сарасин, Смотровая площадка у подножия Большого Будды, Смотровая площадка «Ветряки», Смотровая площадка «Карон» (Karon Viewpoint), Смотровая площадка мыса Промтхеп, Наш выбор обзорная башня Кхао Кхад.
     - question: Смотровые площадки Пхукетa 
       hashtag: smotrovie
       ldjson: yes
@@ -253,7 +253,7 @@
       hashtag: rentayahta
       ldjson: yes
       answer: |
-	  Цена аренды яхты или катера на Пхукете зависит от типа яхты и маршрута и варьируется в пределах от 13 000 до 670 000 бат/сутки, что соответствует от 400 до 21000 долларов.
+         Цена аренды яхты или катера на Пхукете зависит от типа яхты и маршрута и варьируется в пределах от 13 000 до 670 000 бат/сутки, что соответствует от 400 до 21000 долларов.
     - question: Могу ли я арендовать автомобиль на Пхукете?
       hashtag: rentacar
       ldjson: yes
@@ -485,84 +485,84 @@
 - question: Пляжи
   hashtag:  plazhu
   items:
-	- question: Ну Пхукете море или океан?
+    - question: Ну Пхукете море или океан?
       hashtag: phuketmoreokean
       ldjson: yes
       answer: |
-	      Пхукет расположен у западного побережья Таиланда, в Андаманском море Индийского океана. Пхукет лидирует в списке крупнейших островов Таиланда.
+          Пхукет расположен у западного побережья Таиланда, в Андаманском море Индийского океана. Пхукет лидирует в списке крупнейших островов Таиланда.
     - question: На пхукете есть акулы?
       hashtag: phuketacula
       ldjson: yes
       answer: |
-	      Тропическое расположение Тайланда, теплая вода, разнообразие морской жизни привлекают в моря, омывающие эту страну, не только туристов со всего света, но и морских обитателей. Подводная фауна тайских вод разнообразна, представлена многочисленными видами, среди которых одними из наиболее колоритных по праву считаются акулы.
-	- question: Общество нудистов в Таиланде?
+          Тропическое расположение Тайланда, теплая вода, разнообразие морской жизни привлекают в моря, омывающие эту страну, не только туристов со всего света, но и морских обитателей. Подводная фауна тайских вод разнообразна, представлена многочисленными видами, среди которых одними из наиболее колоритных по праву считаются акулы.
+    - question: Общество нудистов в Таиланде?
       hashtag: phuketnudist
       ldjson: yes
       answer: |   
-	      К сожалению, эта часть нудистского отдыха невозможна даже на уединенных пляжах Пхукета. Так как у туристов нет возможности посетить официальный нудистский пляж в Таиланде, здесь образовалось общество нудистов, которое нашло способ не нарушать закон и отдыхать по своему усмотрению.
+          К сожалению, эта часть нудистского отдыха невозможна даже на уединенных пляжах Пхукета. Так как у туристов нет возможности посетить официальный нудистский пляж в Таиланде, здесь образовалось общество нудистов, которое нашло способ не нарушать закон и отдыхать по своему усмотрению.
     - question: Какие самые чистые пляжи пхукета?
       hashtag: phuketplazhchustii
       ldjson: yes
       answer: |  
-	      Как известно, самые чистые участки береговой линии находятся возле отелей. Панси, к примеру, — целый пляж при отеле, за чистотой которого неустанно следит администрация. ... 
-              Пляж Ката Пляж Ката также считается одним из самых чистых, на берегу есть несколько крупных отелей. ... 
-              Пляж Банг Тао ... 
-              Пляж Найтон
+          Как известно, самые чистые участки береговой линии находятся возле отелей. Панси, к примеру, — целый пляж при отеле, за чистотой которого неустанно следит администрация. ... 
+          Пляж Ката Пляж Ката также считается одним из самых чистых, на берегу есть несколько крупных отелей. ... 
+          Пляж Банг Тао ... 
+          Пляж Найтон
     - question: На каком пляже белый песок на пхукете?
       hashtag: phuketplazhpesok
       ldjson: yes
       answer: | 
-	      Фридом - запад Пхукета. Один из лучших пляжей острова, песок мелкий, при определённом освещении - практически белый!
+          Фридом - запад Пхукета. Один из лучших пляжей острова, песок мелкий, при определённом освещении - практически белый!
     - question: Самые популярные пляжи пхукета.
       hashtag: phuketpopular
       ldjson: yes
       answer: |
-	      Пляж Карон, Пляж Патонг,Пляж Ката, Пляж Камала — Kamala Beach, Пляж Сурин, Пляж Най Харн, Пляж Найтон,Пляж Банг Тао, Пляж Фридом, Пляж Май Као, Пляж Равай — Rawai Beach, Пляж Най Янг — Nai Yang  Beach, Пляж Три Транг – Tri Trang Beach, Пляж Чалонг — Chalong Beach.
+          Пляж Карон, Пляж Патонг,Пляж Ката, Пляж Камала — Kamala Beach, Пляж Сурин, Пляж Най Харн, Пляж Найтон,Пляж Банг Тао, Пляж Фридом, Пляж Май Као, Пляж Равай — Rawai Beach, Пляж Най Янг — Nai Yang  Beach, Пляж Три Транг – Tri Trang Beach, Пляж Чалонг — Chalong Beach.
     - question: Пляжи пхукета для детей
       hashtag: phuketplazhdeti
       ldjson: yes
       answer: |
-	      Пляжи Карон, Ката, Ката Ной, Най Харн,  Банг Тао, Камала, Сурин, Найтон.
+          Пляжи Карон, Ката, Ката Ной, Най Харн,  Банг Тао, Камала, Сурин, Найтон.
     - question: Как называеться пляж с самолетами на пхукете?
       hashtag: phuketplazhsamolet
       ldjson: yes
       answer: |
-	      Май Као, Mai Khao — это пляж, который известен тем, что здесь очень низко пролетают самолеты, прямо над головой, иначе этот пляж так и называют — пляж с самолетами на Пхукете. В мире есть всего несколько таких пляжей, где посадочная и взлетная полоса аэропорта находятся прямо у пляжа.
+         Май Као, Mai Khao — это пляж, который известен тем, что здесь очень низко пролетают самолеты, прямо над головой, иначе этот пляж так и называют — пляж с самолетами на Пхукете. В мире есть всего несколько таких пляжей, где посадочная и взлетная полоса аэропорта находятся прямо у пляжа.
     - question: Дикие пляжи пхукета.
       hashtag: phuketplazhdikiy
       ldjson: yes
       answer: |
-	      Пляж Лаян, Пляж Банана, Пляж Ао Сейн, Пляж Фридом, Пляж Май Као.
+         Пляж Лаян, Пляж Банана, Пляж Ао Сейн, Пляж Фридом, Пляж Май Као.
     - question: Cамый чистый пляж пхукета
       hashtag: phuketplazhsamiichistiy
       ldjson: yes
       answer: |
-	      Пляж Карон-Бич — самый красивый и самый чистый на Пхукете, находится на западном побережье острова, южнее Патонга и севернее пляжа Ката-Бич.
+         Пляж Карон-Бич — самый красивый и самый чистый на Пхукете, находится на западном побережье острова, южнее Патонга и севернее пляжа Ката-Бич.
     - question: Есть ли платные пляжи на пхукете?
       hashtag: phuketplazhplatniy
       ldjson: yes
       answer: |
-	      Пхукете Пляж Freedom небольшой, длина около 300 метров. Разгуляться особо негде, но он наиболее протяженный, чем другие платные и труднодоступные пляжи Пхукета, типа Парадайз, Нуи, Банана, Ао Сен и Лаем Ка.
+         Пхукете Пляж Freedom небольшой, длина около 300 метров. Разгуляться особо негде, но он наиболее протяженный, чем другие платные и труднодоступные пляжи Пхукета, типа Парадайз, Нуи, Банана, Ао Сен и Лаем Ка.
     - question: Есть ли медузы на пхукете?
       hashtag: phuketplazhmeduza
       ldjson: yes
       answer: | 
-	      Приезжающим отдохнуть в Таиланд следует знать, что понятия «сезон медуз» на Пхукете не существует. Морские создания появляются у берегов, как правило, после дождей и штормов.
+         Приезжающим отдохнуть в Таиланд следует знать, что понятия «сезон медуз» на Пхукете не существует. Морские создания появляются у берегов, как правило, после дождей и штормов.
     - question: Как попасть на остров Джеймса Бонда на пхукете?
       hashtag: phuketplazhbond
       ldjson: yes
       answer: | 
-	      Добраться до острова можно и самостоятельно арендовав деревянную лодку на пирсе Пханг Нга Бэй в заливе Пханг Нга за пределами Пхукета. Посмотрите другие экскурсии на острова с Пхукета и все наши экскурсии на Пхукете.
+         Добраться до острова можно и самостоятельно арендовав деревянную лодку на пирсе Пханг Нга Бэй в заливе Пханг Нга за пределами Пхукета. Посмотрите другие экскурсии на острова с Пхукета и все наши экскурсии на Пхукете.
 - question: Рыбалка
   hashtag:  ribalka
-  items:	  
+  items:
     - question: Какая есть рыбалка на пхукете.
       hashtag: phuketribalka
       ldjson: yes
       answer: | 
-	      Морская рыбалка на Пхукете,Групповая экскурсия "Морская рыбалка на Пхукете".Индивидуальная морская рыбалка и аренда катера для рыбалки на Пхукете,Рыбалка на Пхукете самостоятельно с берега,Озерная пресноводная рыбалка на Пхукете.
+        Морская рыбалка на Пхукете,Групповая экскурсия "Морская рыбалка на Пхукете".Индивидуальная морская рыбалка и аренда катера для рыбалки на Пхукете,Рыбалка на Пхукете самостоятельно с берега,Озерная пресноводная рыбалка на Пхукете.
     - question: Разрешена ли рыбалка на пхукете с берега.
       hashtag: phuketribalkabereg
       ldjson: yes
       answer: | 
-	      Ловля рыбы с берега на удочку на Пхукете разрешена, но запрещена на соседних островах у коралловых рифов и в морских национальных парках. Местные обычно ловят рыбу рано утром, вечером или ночью, популярные места: пирс Раваи, скалы у пляжа Януй, скалы справа от пляжа Сурин, пляж Майкао
+        Ловля рыбы с берега на удочку на Пхукете разрешена, но запрещена на соседних островах у коралловых рифов и в морских национальных парках. Местные обычно ловят рыбу рано утром, вечером или ночью, популярные места: пирс Раваи, скалы у пляжа Януй, скалы справа от пляжа Сурин, пляж Майкао
