--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -27,7 +27,7 @@
       hashtag: smotrovie
       ldjson: yes
       answer: |
-	      Холм Ранг (Rang Hill), Мост Сарасин, Смотровая площадка у подножия Большого Будды, Смотровая площадка «Ветряки», Смотровая площадка «Карон» (Karon Viewpoint), Смотровая площадка мыса Промтхеп, Наш выбор обзорная башня Кхао Кхад.
+          Холм Ранг (Rang Hill), Мост Сарасин, Смотровая площадка у подножия Большого Будды, Смотровая площадка Ветряки, Смотровая площадка Карон (Karon Viewpoint), Смотровая площадка мыса Промтхеп, Наш выбор обзорная башня Кхао Кхад.
     - question: Смотровые площадки Пхукетa 
       hashtag: smotrovie
       ldjson: yes
@@ -36,8 +36,8 @@
       hashtag: daiving
       ldjson: yes
       answer: |
-	  Естественно, в первую очередь стоит указать Симиланские острова, которые являются одним из самых известных мест для дайвинга не только в Таиланде, но и во всем мире. Именно здесь можно полностью исследовать все богатство подводного мира Андаманского моря. Правда, нырять и любоваться таким зрелищем могут только сертифицированные дайверы.
-	  Остров Рача Яй. Этот остров расположен недалеко от Пхукета и хорошо известен дайверам со всего мира. Здесь есть неглубокие участки для новичков и более глубокие зоны (от 18 метров глубиной) для профессионалов. Остров также идеально подходит для снорклинга.
+          Естественно, в первую очередь стоит указать Симиланские острова, которые являются одним из самых известных мест для дайвинга не только в Таиланде, но и во всем мире. Именно здесь можно полностью исследовать все богатство подводного мира Андаманского моря. Правда, нырять и любоваться таким зрелищем могут только сертифицированные дайверы.
+          Остров Рача Яй. Этот остров расположен недалеко от Пхукета и хорошо известен дайверам со всего мира. Здесь есть неглубокие участки для новичков и более глубокие зоны (от 18 метров глубиной) для профессионалов. Остров также идеально подходит для снорклинга.
           Острова Пхи Пхи также популярны среди дайверов. Архипелаг прославился своими прекрасными подводными пейзажами с коралловыми рифами. На островах есть несколько дайвинг центров с опытными инструкторами, которые обучат нырянию каждого желающего с любым уровнем подготовки.
           Тем, кто занимается дайвингом на Пхукете профессионально, наверняка будет интересен затонувший в прибрежных водах лайнер «Кинг Круизер». Погрузившись на 30 метровую глубину, каждый дайвер здесь может сделать сенсационное открытие.            Прекрасное место, чтобы заняться дайвингом на Пхукете в открытом море – это Анемон Риф. Прекрасные анемоны, скалы, яркие рыбки и прочие подводные обитатели поразят своей красотой.
           Погружение в Шарк Пойнт – это развлечение не для слабонервных. Здесь дайверы часто встречают прекрасных и устрашающих леопардовых акул. Но опасаться их не стоит, так как они питаются только планктоном и кораллами.
