--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -6,11 +6,11 @@
       hashtag: slony
       ldjson: yes
       answer: |
-          На слонах можно покататься (Калим,Най Харн).
-		  Калим - Слоновник открыт с 8.00 до 18.00 (Выезд каждый час с 9.00 до 17.30) за 30 минут цены на взрослый билет будут стоить 600 бат, детский 500.А за 60 минут, детский обойдётся в 600 взрослый 800 бат.
-		  Так же есть Най Харн - Время работы с 8.30 до 17.00 (Выезд кадый час с 9.00 до 16.00) за 30 минут цены на взрослый билей будут стоить 600 бат и 500 детский.
-		  Бесплатный трансфер до "Калим" с пляжей Ката,Карон,Камала,Сурин,Бангтао,Лагуна. 
-		  Беслатный трансфер до "Най Харн" с Патонг,Карон,Ката.
+          На слонах можно покататься (Калим,Най Харн)
+          Калим - Слоновник открыт с 8.00 до 18.00 (Выезд каждый час с 9.00 до 17.30) за 30 минут цены на взрослый билет будут стоить 600 бат, детский 500.А за 60 минут, детский обойдётся в 600 взрослый 800 бат
+          Так же есть Най Харн - Время работы с 8.30 до 17.00 (Выезд кадый час с 9.00 до 16.00) за 30 минут цены на взрослый билей будут стоить 600 бат и 500 детский.
+          Бесплатный трансфер до "Калим" с пляжей Ката,Карон,Камала,Сурин,Бангтао,Лагуна. 
+          Беслатный трансфер до "Най Харн" с Патонг,Карон,Ката.
     - question: Где есть тигры на пхукете?   
       hashtag: tigry
       ldjson: yes
@@ -23,8 +23,8 @@
       answer: |
           В первую очередь нужно отправиться на гору Monkey Hill. Она находится в северной части Пхукет-Тауна. Вершину ее венчают разнообразные антенны и радиомачты. Обезьяны также живут в основном в верхней части горы
           Смотровая площядка Као Ранг - тут очень много обезьян, особенно утром. Когда их кормят они достаточно агрессивны, поэтому не рекомендуется контактировать с ними вплотную и кормить с рук.
-		  Следующее место с обезьянами - смотровая Биг Будда. Стоять спиной к большой лестнице, обезьяны находятся сзади в правом углу.
-		  На юго-востоке острова, в месте под названием Ко Сирей, существует официальная площадка для наблюдения за обезьянами. Еду им лучше кидать подальше не провоцируя агрессивное поведение! 
+          Следующее место с обезьянами - смотровая Биг Будда. Стоять спиной к большой лестнице, обезьяны находятся сзади в правом углу.
+          На юго-востоке острова, в месте под названием Ко Сирей, существует официальная площадка для наблюдения за обезьянами. Еду им лучше кидать подальше не провоцируя агрессивное поведение! 
     - question: Смотровые площадки Пхукетa 
       hashtag: smotrovie
       ldjson: yes
@@ -208,8 +208,7 @@
         
           Стоимость аренды зависит от ее срока, причем зависит существенно. Если за суточное проживания в гестхаусе нужно заплатить порядка 15 долларов в сутки, то за месяц эта сумма будет составлять примерно 150-180 долларов. Наибольшее влияние на стоимость оказывает расположение гестхауса, но такая же ситуация и с отелями. На Патонге стоимость аренды будет в 1,5 раза выше, чем в столице острова городе Пхукет. Кроме этого стоимость зависит от ряда дополнительных услуг. Также существенное влияние на стоимость оказывает размер комнаты, чем меньше комната, тем цена ниже. Маленькую комнату предпочитают молодые пару, которые приезжают отдыхать и развлекаться, а гестхаус им нужен только для ночлега и принятия душа (в таком случае размер комнаты не имеет значения). Можно найти гестхаус на определенном расстоянии от пляжа и при этом взять в аренду мопед. Экономия должна быть объективной, не нужно искать самый дешевый гестхаус, а потом думать, как оттуда съехать.
           
-          При аренде гестхауса на месяц нужно обговорить все моменты такой аренды  частоту смены белья, уборку, размер депозита и условия его возвращения. Скорее всего, дополнительно придется оплачивать некоторые коммунальные услуги (за воду устанавливают фиксированную сумму, а свет по счетчику). Каждый хозяин гестхауса устанавливает свои правила и прежде чем заселиться в номер нужно с ними ознакомиться.
-		  
+          При аренде гестхауса на месяц нужно обговорить все моменты такой аренды  частоту смены белья, уборку, размер депозита и условия его возвращения. Скорее всего, дополнительно придется оплачивать некоторые коммунальные услуги (за воду устанавливают фиксированную сумму, а свет по счетчику). Каждый хозяин гестхауса устанавливает свои правила и прежде чем заселиться в номер нужно с ними ознакомиться. 
     - question: Могут ли заселить в отель в один номер совершеннолетнего парня и несовершеннолетнюю девушку?
       hashtag: hotelyoung
       ldjson: yes
@@ -243,8 +242,8 @@
       answer: |
         * В Тайланде очень опасно на дорогах,так что нужно иметь страховку, если её нет лучше походить пешком.Есть аренда авто
           и аренда байков.
-		  Стоимость байков  варьируется в пределах 200-300 бат/сутки. Более мощные и крупногабаритные Honda PCX, Honda Forza, Yamaha T-MAX, Yamaha N-MAX сдаются по цене от 400 бат/сутки.
-		  Стоимость машины эконом-класса в хорошем состоянии с АКПП и кондиционером — 1000-1400 Бат в сутки, среднего класса — 1300-1700 бат, внедорожника — 1500-2000 бат.
+       Стоимость байков  варьируется в пределах 200-300 бат/сутки. Более мощные и крупногабаритные Honda PCX, Honda Forza, Yamaha T-MAX, Yamaha N-MAX сдаются по цене от 400 бат/сутки.
+       Стоимость машины эконом-класса в хорошем состоянии с АКПП и кондиционером — 1000-1400 Бат в сутки, среднего класса — 1300-1700 бат, внедорожника — 1500-2000 бат.
     - question: Как добраться из аэропорта Пхукета до Као Лак?
       hashtag: Хэш
       ldjson: yes
@@ -552,7 +551,7 @@
       hashtag: posolstvophucet
       ldjson: yes
       answer: | 
-	    Консульство России в Phuket возглавляет Vladimir V. Sosnov ─ консул России в Таиланд. С консул можно связаться по телефону (+66) 95-259-80-81 или по электронной почте rusconsulphuket@gmail.com
+        Консульство России в Phuket возглавляет Vladimir V. Sosnov ─ консул России в Таиланд. С консул можно связаться по телефону (+66) 95-259-80-81 или по электронной почте rusconsulphuket@gmail.com
         Thailand - 63/501 Moo 2 - Thepkasattri Road - Kohkaew - Amphoe Mueang - Phuket 83100 — Thailand
 - question: Банки
   hashtag:  banki
@@ -561,15 +560,15 @@
       hashtag: schetvbanke
       ldjson: yes
       answer: |
-	  Для открытия счёта в банке Крунгсри 
-      - загранпаспорт со штампом о пребывании на месяц 
-      - миграционная карта - лист об отбытии (Departure Card)
-      - договор на аренду жилья (сроком не менее, чем на 6-ть месяцев)
-      - копия с подписью id card того человека, который, по договору, сдаёт вам в аренду жильё
-      - копия с подписью загранпаспорта того человека, который, по договору, сдаёт вам в аренду жильё 
-      - копия с подписью документа подтверждающего право собственности сдаваемого в аренду жилья 
-      - местная сим-карта, для того, чтобы подключить мобильный банк и интернет-банкинг
-      Когда вы проверили и убедились, что этот список документов у вас присутствует, вы отправляетесь в отделение банка Krungsri (Thailand). На входе говорите сотруднику, что вы хотите открыть счёт и получить карту или сами получаете талон на терминале о том, что вам необходимо открыть счёт в их банке (open account). Получаете талон и ждёте своей очереди.
+        Для открытия счёта в банке Крунгсри 
+        - загранпаспорт со штампом о пребывании на месяц 
+        - миграционная карта - лист об отбытии (Departure Card)
+        - договор на аренду жилья (сроком не менее, чем на 6-ть месяцев)
+        - копия с подписью id card того человека, который, по договору, сдаёт вам в аренду жильё
+        - копия с подписью загранпаспорта того человека, который, по договору, сдаёт вам в аренду жильё 
+        - копия с подписью документа подтверждающего право собственности сдаваемого в аренду жилья 
+        - местная сим-карта, для того, чтобы подключить мобильный банк и интернет-банкинг
+        Когда вы проверили и убедились, что этот список документов у вас присутствует, вы отправляетесь в отделение банка Krungsri (Thailand). На входе говорите сотруднику, что вы хотите открыть счёт и получить карту или сами получаете талон на терминале о том, что вам необходимо открыть счёт в их банке (open account). Получаете талон и ждёте своей очереди.
 - question: Виза
   hashtag:  viza
   items:
@@ -577,12 +576,11 @@
       hashtag: vizaprodlenie
       ldjson: yes
       answer: |
-	 * В связи с коронавирусом Иммиграционный офис Пхукета разрешил продливать все визы на 30 дней за 1900 батов. Для такого продления нужна справка из посольства страны гражданства на имя продливающего визу. В справке должно быть указано, что человек не может выехать из Таиланда из-за covid-19
+        * В связи с коронавирусом Иммиграционный офис Пхукета разрешил продливать все визы на 30 дней за 1900 батов. Для такого продления нужна справка из посольства страны гражданства на имя продливающего визу. В справке должно быть указано, что человек не может выехать из Таиланда из-за covid-19
 - question: Услуги
   hashtag:  uslugi	
   items: 
     - question: Где сделать маникюр на пхукете?
       hashtag: manikur
       ldjson: yes
-      answer: |
-	  
+      answer: | 
